[package]
name = "ws_feed_connect"
version = "0.1.0"
authors = ["Mikhail Katychev <mkatych@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the HelloWorld gRPC server
name = "orderbook-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "orderbook-client"
path = "src/client.rs"

[dependencies]
tonic = "0.4"
prost = "0.7"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.4"
