[package]
name = "ws_feed_connect"
version = "0.1.0"
authors = ["Mikhail Katychev <mkatych@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the HelloWorld gRPC server
name = "orderbook-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "orderbook-client"
path = "src/client.rs"

[dependencies]
tonic = "0.4"
prost = "0.7"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"

async-stream = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
rand = "0.7"
futures = "0.3.14"
tungstenite = "0.13.0"
url = "2.2.1"
async-std = "1.9.0"

[build-dependencies]
tonic-build = "0.4"
